tests/paczka1/fuzzy1/14273513.err
Error in line 1: vwi8 A693 64,3
Error in line 2: jyYEWjBR A641 7,1
Error in line 14: vwi8 A693 11,0
Error in line 7: n1UFXN A693 66,7
Error in line 30: A693 A693 -4,5
Error in line 19: A693 A693 59,0
Error in line 39: vwi8 S513 48,33
Error in line 40: jyYEWjBR A641 -3,6
